<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanetScreen">

    <TextView
        android:id="@+id/DetailTitlePlanet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeScreen"
        android:textColor="#304FFE"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:id="@+id/planet_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/planet_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_name_label"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/planet_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planet_name"
                android:textColor="#304FFE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planet_radius_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/planet_radius_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_radius_label"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/planet_radius_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planet_radius_in_meters"
                android:textColor="#304FFE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planet_age_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/planet_age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_age_label"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/planet_age_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planet_age"
                android:textColor="#304FFE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planet_weight_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/planet_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_weight_label"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/planet_weight_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planet_weight_kg"
                android:textColor="#304FFE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planet_rts_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/planet_rts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_vom_label"
                android:textColor="#304FFE"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/planet_orbital_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planet_vom_text"
                android:textColor="#304FFE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/planetpicture"
        android:layout_width="@dimen/screen_imagedimension"
        android:layout_height="@dimen/screen_imagedimension"
        android:background="@drawable/terre"
        android:contentDescription="@string/profilpic_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>